Fix some spacing on set list

--- a/components/SetDetails/SetDetails.module.scss
+++ b/components/SetDetails/SetDetails.module.scss
@@ -52,6 +52,7 @@
   margin-left: 25px;
   margin-right: 25px;
   margin-bottom: 40px;
+  width: 185px;
   cursor: pointer;
 }
 
@@ -78,6 +79,7 @@
   font-size: 0.85em;
   font-weight: bold;
   margin-bottom: 5px;
+  text-align: center;
 }
 
 .cardNumber {
